--- a/doc/pubs/CIARP2015/tex/intro.tex
+++ b/doc/pubs/CIARP2015/tex/intro.tex
@@ -27,6 +27,7 @@ $m = 1$.
 However it is a NP-hard problem significantly harder to solve in practice than the KP.
 Due its simple definition but challenging difficulty of solving, the MKP is often used to
 to verify the efficiency of novel metaheuristics.
+A good review for the MKP is given by \cite{freville1994efficient}.
 
 In this paper we address the application of a metaheuristic called
 shuffled complex evolution (SCE) to the multidimensional knapsack problem.
@@ -38,7 +39,7 @@ like flow shop scheduling~\cite{zhao2014shuffled} and project management~\cite{e
 
 The reminder of the paper is organized as follows:
 Section~\ref{sec:sce} presents the shuffled complex evolution algorithm
-and proposes its application on the multidimensional knapsack problem.
+and proposes its application on the MKP.
 Section~\ref{sec:exp} comprises several computational experiments.
 In section~\ref{sec:conc} we make our concluding remarks about the experimental
 results.
