--- a/doc/pubs/CIARP2015/tex/refs.bib
+++ b/doc/pubs/CIARP2015/tex/refs.bib
@@ -101,3 +101,36 @@ masid = {2678570}
   publisher={Elsevier}
 }
 
+@article{Achterberg2009,
+  author =	 {Tobias Achterberg},
+  title =	 {SCIP: Solving constraint integer programs},
+  journal =	 {Mathematical Programming Computation},
+  year =	 2009,
+  volume =	 1,
+  number =	 1,
+  month =	 July,
+  pages =	 {1--41},
+  note =         {\url{http://mpc.zib.de/index.php/MPC/article/view/4}}
+}
+
+@article{padberg1991branch,
+  title={A branch-and-cut algorithm for the resolution of large-scale symmetric traveling salesman problems},
+  author={Padberg, Manfred and Rinaldi, Giovanni},
+  journal={SIAM review},
+  volume={33},
+  number={1},
+  pages={60--100},
+  year={1991},
+  publisher={SIAM}
+}
+
+@article{freville2004multidimensional,
+  title={The multidimensional 0--1 knapsack problem: An overview},
+  author={Fr{\'e}ville, Arnaud},
+  journal={European Journal of Operational Research},
+  volume={155},
+  number={1},
+  pages={1--21},
+  year={2004},
+  publisher={Elsevier}
+}
