fast nu doc iniciado.

--- a/doc/pubs/FAST-MKP-NH/paper.tex
+++ b/doc/pubs/FAST-MKP-NH/paper.tex
@@ -38,14 +38,13 @@
 
 
 \address{Universidade Federal do Esp\'irito Santo,\\
-Av. Fernando Ferrari, 514, Goiabeiras, Vit\'oria, ES, Brazil\\
-\ead[http://ninfa.inf.ufes.br]
+%Av. Fernando Ferrari, 514, Goiabeiras, Vit\'oria, ES, Brazil\\
+%\ead[http://ninfa.inf.ufes.br]
 }
 
 
 \author{
-   Marcos Daniel Valad\~ao Baroni\thanks{Research supported by Funda\c c\~ao de Amparo \`a Pesquisa do Esp\'irito Santo.}
-   \and
+   Marcos Daniel Valad\~ao Baroni\thanks{Research supported by Funda\c c\~ao de Amparo \`a Pesquisa do Esp\'irito Santo.},
    Fl\'avio Miguel Varej\~ao
 }
 
@@ -64,6 +63,7 @@ Dynamic programming \sep Combinatorial optimization \sep Integer programming
 
 %% PACS codes here, in the form: \PACS code \sep code
 
+\MSC[2010] 90C39 \sep 90C27 \sep 90C10
 %% MSC codes here, in the form: \MSC code \sep code
 %% or \MSC[2008] code \sep code (2000 is the default)
 
@@ -71,12 +71,32 @@ Dynamic programming \sep Combinatorial optimization \sep Integer programming
 
 \end{frontmatter}
 
-%\section{Introduction}
+\section{Introduction}
+% Sobre MKP: Dificuldade, histórico, abordagens
+% Abordagens para o MKP
+
+\section{Related Work}
+% Sobre DP
+% DP para KP/MKP (Nemhauser Ullman)
+% Uso em KP (minknap, Combo, ...)
+% Usos em MKP: Exact approach, Belav reduction
+
+\section{Secao sobre indexacao}
+% Indexação multidimensional
+
+\section{Computational Experiments}
+
+\section{Conclusions em Remark}
+
 %\label{sec:intro}
 %\input{intro.tex}
 
+\cite{Karp-1972}
+
+\bibliographystyle{elsarticle/elsarticle-num}
 %\bibliographystyle{splncs03}
 \bibliography{../../refs}
 
 \end{document}
+\endinput
 
