ajsutes em ELD:prova1a

--- a/doc/eld/prova1a.tex
+++ b/doc/eld/prova1a.tex
@@ -73,9 +73,12 @@
 {\Large \bf Elementos de Lógica Digital - 2015/2}
 \end{center}
 
-{\large \bf 1ª Lista de exercícios}
+{\large \bf 1ª Prova}
 
-{\bf dia:} 24/09/2015
+{\bf Professor:} Marcos Daniel Baroni
+
+{\bf Data:} 05/10/2015 (2ª chamada)
+
 
 \exerc{1}{Realize as seguintes conversões entre sistemas numéricos:}{(2.0 pontos)}
 \begin{exitems}{2}
