--- a/doc/eld/lista2/lista2.tex
+++ b/doc/eld/lista2/lista2.tex
@@ -98,7 +98,9 @@
  	seja feita em ordem reversa.}{}
 
 \exerc{3}{O contador abaixo realiza a contagem de qual sequencia?}{}
-...
+\begin{center}
+		\includegraphics[scale=0.6]{cont1} \\ \vspace{15pt}
+\end{center}
 
 \exerc{4}{Implemente um multiplexador de....}{}
 
