--- a/doc/eld/lista2/lista2.tex
+++ b/doc/eld/lista2/lista2.tex
@@ -1,6 +1,6 @@
 \documentclass[12pt]{article}
 \usepackage[utf8]{inputenc}
-\usepackage[cm]{fullpage}
+\usepackage{fullpage}
 \usepackage{amssymb}
 \usepackage{multicol}
 \usepackage{graphicx}
@@ -102,30 +102,28 @@
 		\includegraphics[scale=0.6]{cont1} \\ \vspace{15pt}
 \end{center}
 
-\exerc{4}{Implemente um multiplexador de....}{}
+\exerc{4}{ A partir de dois blocos demultiplex de 16 canais e um de 2 canais, forme um sistema demultiplex de 32 canais.}{}
 
-\exerc{5}{Utilizando um demultiplexador, esquematize o circuito de um demultiplexador...}{}
+\exerc{5}{ Esquematize o circuito interno de um multiplexador de 16 canais.}{}
 
-\exerc{6}{Defina (I) capacidade máxima, (II) largura de barra de dados, (III) tamanho de palavra,
-(IV) quantidade de endereço e (V) endereço final das memórias descritas abaixo:}{}
+\exerc{6}{ Utilizando células básicas de memória, esquematize o circuito interno de uma RAM (a) 8x4 e (b) 4x8. }{}
+
+
+\exerc{7}{Defina
+(I) capacidade de memória,
+(II) largura de palavra de dados,
+(III) largura da barra de endereços e
+(IV) palavra de endereço final
+para as seguintes memórias:}{}
 \begin{exitems}{2}
-	\exitem{a}{ 16k x 8}
-	\exitem{b}{ }
-	\exitem{c}{ }
+	\exitem{a}{ 16k x 8 }
+	\exitem{b}{ 64 x 4 }
+	\exitem{c}{ 1M x 16 }
 	\\
-	\exitem{d}{ }
-	\exitem{e}{ }
-	\exitem{f}{ }
+	\exitem{d}{ 128 x 8 }
+	\exitem{e}{ 64K x 8 }
+	\exitem{f}{ 2M x 16 }
 \end{exitems}
-
-\begin{multicols}{2}
-\begin{center}
-%\includegraphics{fp-jk} \\ \vspace{15pt}
-%\includegraphics[scale=0.5]{sig1} \\
-%\includegraphics{fp-jk} \\ \vspace{15pt}
-%\includegraphics[scale=0.5]{sig2}
-\end{center}
-\end{multicols}
 
 \end{document}
 
