--- a/doc/eld/lista2/lista2.tex
+++ b/doc/eld/lista2/lista2.tex
@@ -106,7 +106,8 @@
 
 \exerc{5}{ Esquematize o circuito interno de um multiplexador de 16 canais.}{}
 
-\exerc{6}{ Utilizando células básicas de memória, esquematize o circuito interno de uma RAM (a) 8x4 e (b) 4x8. }{}
+\exerc{6}{ Utilizando células básicas de memória, esquematize o circuito interno de uma RAM (a) 8x4 e (b) 4x8.
+Utilize as céluas básicas de memória.}{}
 
 
 \exerc{7}{Defina
