--- a/doc/eld/lista2/lista2.tex
+++ b/doc/eld/lista2/lista2.tex
@@ -106,12 +106,11 @@
 
 \exerc{5}{ Esquematize o circuito interno de um multiplexador de 16 canais.}{}
 
-\exerc{6}{ Utilizando células básicas de memória, esquematize o circuito interno de uma RAM (a) 8x4 e (b) 4x8.
-Utilize as céluas básicas de memória.}{}
+\exerc{6}{ Utilizando células básicas de memória, esquematize o circuito interno de uma RAM (a) 8x4 e (b) 4x8.}{}
 
 
 \exerc{7}{Defina
-(I) capacidade de memória,
+(I) capacidade total de memória (em bits),
 (II) largura de palavra de dados,
 (III) largura da barra de endereços e
 (IV) palavra de endereço final
@@ -126,5 +125,11 @@ para as seguintes memórias:}{}
 	\exitem{f}{ 2M x 16 }
 \end{exitems}
 
+%\exerc{8a}{A partir de blocos RAM 64x4, esquematize uma RAM 64x8.
+%Escreva as palavras de endereçamento inicial e final de cada RAM integrada
+%ao sistema.}{}
+%\exerc{8b}{Idem ao item anterior, para obter uma RAM 512x4 com blocos de estrutura 128x4.}{}
+
+%\exerc{8c}{Idem, para obter uma RAM 64x8, obtidas com blocos de estrutura 32x4.}{}
 \end{document}
 
