--- a/doc/pubs/CIARP2015/poster/poster.tex
+++ b/doc/pubs/CIARP2015/poster/poster.tex
@@ -36,6 +36,10 @@
 \usepackage{amsfonts, amsmath, amsthm, amssymb} % For math fonts, symbols and environments
 \usepackage{wrapfig} % Allows wrapping text around tables and figures
 
+\newcommand{\brasaoufes}{
+  \includegraphics[width=4cm]{../../brasao-ufes}
+}
+
 \begin{document}
 
 %----------------------------------------------------------------------------------------
@@ -47,22 +51,18 @@
 % The second is 25% wide and houses a logo for your university/organization or a photo of you
 % The widths of these boxes can be easily edited to accommodate your content as you see fit
 
-\begin{minipage}[b]{0.25\linewidth}
-\includegraphics[width=20cm]{../../brasao-ufes}\\
-\end{minipage}
-
-\begin{minipage}[b]{0.75\linewidth}
+\begin{minipage}[t]{0.80\linewidth}
 \veryHuge \color{NavyBlue} \textbf{A shuffled complex evolution algorithm for
 the multidimensional knapsack problem} \color{Black}\\ % Title
 %\Huge\textit{An Exploration of Complexity}\\[2cm] % Subtitle
+\brasaoufes
 \huge \textbf{Marcos Baroni \& Fl\'avio Varej\~ao}\\[0.5cm] % Author(s)
 \huge Universidade Federal do Espírito Santo - Departamento de Inform\'atica\\[0.4cm] % University/organization
 \Large \texttt{marcos.baroni@aluno.ufes.br}\\
 \end{minipage}
-%
-\begin{minipage}[b]{0.25\linewidth}
-\includegraphics[width=20cm]{../../brasao-ufes}\\
-\end{minipage}
+%\begin{minipage}[t]{0.20\linewidth}
+%\includegraphics[width=10cm]{ciarp-logo}\\
+%\end{minipage}
 
 \vspace{1cm} % A bit of extra whitespace between the header and poster content
 
