poster ciarp2015: usando minipage em figuras.

--- a/doc/pubs/CIARP2015/poster/poster.tex
+++ b/doc/pubs/CIARP2015/poster/poster.tex
@@ -143,6 +143,14 @@ Aliquam non lacus dolor, \textit{a aliquam quam} \cite{Smith:2012qr}. Cum sociis
   \end{subfigure}
 \end{figure}
 
+\begin{center}
+\begin{minipage}{0.3\linewidth}
+    \includegraphics[scale=1.5]{flow1}
+\end{minipage}
+\begin{minipage}{0.3\linewidth}
+    \includegraphics[scale=1.5]{flow2}
+\end{minipage}
+\end{center}
 
 \color{SaddleBrown} % SaddleBrown color for the conclusions to make them stand out
 
