--- a/doc/refs.bib
+++ b/doc/refs.bib
@@ -451,7 +451,7 @@ masid = {1249989}
 
 @ONLINE{Dorigo2013,
 author = {Dorigo, Marco},
-title = {Metaheuristics Network \url{http://www.metaheuristics.net}},
+title = {Metaheuristics Network \texttt{http://www.metaheuristics.net}},
 month = May,
 year = {2013},
 url = {http://www.metaheuristics.net/}
@@ -592,15 +592,6 @@ masid = {694811}
   pages={329--334},
   year={1982},
   publisher={Elsevier}
-}
-
-@inproceedings{walker1960enumerative,
-  title={An enumerative technique for a class of combinatorial problems},
-  author={Walker, Robert J},
-  booktitle={Proceedings of Symposia in Applied Mathematics},
-  volume={10},
-  pages={91--94},
-  year={1960}
 }
 
 @article{knuth1975estimating,
