poster ciarp 2015 chegando...

--- a/doc/refs.bib
+++ b/doc/refs.bib
@@ -909,3 +909,25 @@ masid = {694811}
   pages={119--132},
   year={1973}
 }
+
+@article{padberg1991branch,
+  title={A branch-and-cut algorithm for the resolution of large-scale symmetric traveling salesman problems},
+  author={Padberg, Manfred and Rinaldi, Giovanni},
+  journal={SIAM review},
+  volume={33},
+  number={1},
+  pages={60--100},
+  year={1991},
+  publisher={SIAM}
+}
+
+@article{achterberg2009scip,
+  title={SCIP: solving constraint integer programs},
+  author={Achterberg, Tobias},
+  journal={Mathematical Programming Computation},
+  volume={1},
+  number={1},
+  pages={1--41},
+  year={2009},
+  publisher={Springer}
+}
