--- a/doc/pubs/CIARP2015/poster2/texs/setup.tex
+++ b/doc/pubs/CIARP2015/poster2/texs/setup.tex
@@ -1,5 +1,7 @@
 A batch of preliminary tests was driven to find the best parameters for the
-problem:
+problem:\vspace{-2mm}
 \begin{center}
   \input{texs/params-tab.tex}
 \end{center}
+All the experiments was run on a 3.40GHz computer with 4GB of RAM.
+SCE lgorithm was implemented in C programming language.
